# oci-rootfs

./: .gitignore  Cargo.toml  README.md
oci-rootfs-ui/: Cargo.toml
oci-rootfs-ui/frontend/: .gitignore  pnpm-lock.yaml  vite.config.ts
oci-rootfs-ui/frontend/src/: App.tsx
oci-rootfs-ui/frontend/src/components/: BlobCache.tsx  PullImage.tsx  VmList.tsx
oci-rootfs-ui/src/: main.rs
src/: lib.rs
src/image/: mod.rs  unpack.rs
src/overlay/: fuse.rs  mod.rs
src/registry/: auth.rs  client.rs  manifest.rs  mod.rs
src/store/: mod.rs
