[package]
name = "oci-rootfs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tempfile = "3"
dirs-next = "2"
bytes = "1"
zeroize = "1"
futures-util = "0.3"
