[package]
name = "oci-rootfs-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
oci-rootfs = { path = ".." }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
walkdir = "2"
dirs-next = "2"
